# cao-lang

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Cargo.toml  Changelog.md  LICENSE  MANIFEST.in  Makefile  README.md  cliff.toml  deny.toml  flake.nix  globals.html  index.html  justfile  setup.py  tox.ini
.cache/clangd/index/: cao-lang.h.3FC9264D753A2288.idx  test_compile.cpp.FA871A4C86A5DB58.idx
.github/workflows/: c.yml  cao-lang-publish.yml  cao-lang-tests.yml  cli-release.yml  cli.yml  publish.yml  python-publish.yml  python-test.yml  python.yml  rust.yml  tests.yml  wasm-tests.yml
assets/js/: search.json
c/: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs  test.c
c/cmake/: FindGoogleTest.cmake
c/src/: lib.rs
c/test/: CMakeLists.txt  test_compile.cpp
cao-lang/: .gitignore  Cargo.toml  Makefile  build.rs  justfile
cao-lang-wasm/: Cargo.toml  Makefile  README.md
cao-lang-wasm/docs/: package-lock.json  tsconfig.json
cao-lang-wasm/src/: ast_node.rs  compilation_unit.rs  lib.rs
cao-lang-wasm/tests/: ast_node.rs  browser_tests.rs  compiler.rs
cao-lang-wasm/tests/implementations/: ast_node.rs  compiler.rs
cao-lang/benches/: cao_lang_benches.rs  fibonacci_program.json  fibonacci_program.yaml  fibonacci_program_recursive.yaml  jump_program.yaml  long_program.json
cao-lang/src/: alloc.rs  bytecode.rs  collections.rs  compiled_program.rs  compiler.rs  disassembly.rs  instruction.rs  lib.rs  prelude.rs  procedures.rs  program.rs  scalar.rs  stdlib.rs  traits.rs  value.rs  vm.rs
cao-lang/src/alloc/: bump_alloc.rs  caolang_alloc.rs
cao-lang/src/collections/: bounded_stack.rs  handle_table.rs  hash_map.rs  key_map.rs  mod.rs  pre_hash_map.rs  scalar_stack.rs  stack.rs  static_stack.rs  value_stack.rs
cao-lang/src/collections/handle_table/: serde_impl.rs  tests.rs
cao-lang/src/collections/hash_map/: serde_impl.rs  tests.rs
cao-lang/src/collections/key_map/: serde.rs  serde_impl.rs  tests.rs
cao-lang/src/collections/pre_hash_map/: mod.rs  serde.rs  tests.rs
cao-lang/src/compiler/: astnode.rs  card.rs  card_description.rs  compilation_error.rs  compile_options.rs  compiled_lane.rs  description.rs  function.rs  function_ir.rs  lane.rs  lane_ir.rs  mod.rs  module.rs  program.rs  tests.rs
cao-lang/src/compiler/module/: tests.rs
cao-lang/src/macros/: vm.rs
cao-lang/src/program/: serde_impl.rs
cao-lang/src/stdlib/: tests.rs
cao-lang/src/traits/: impls.rs  mod.rs
cao-lang/src/vm/: data.rs  instr_execution.rs  mod.rs  runtime.rs  tests.rs
cao-lang/src/vm/runtime/: cao_lang_function.rs  cao_lang_object.rs  cao_lang_string.rs  cao_lang_table.rs
cao-lang/tests/: fibonacci.rs  integration_tests.rs  test_fibonacci.rs  test_for_each.rs  test_tables.rs
cao-lang/tests/foreach/: nested_foreach.yml  simple_foreach.yml
ci/: build-wheels.sh
classes/: astnode.html  compilationunit.html  compileoptions.html  compileresult.html  runresult.html  versioninfo.html
cli/: Cargo.toml
cli/src/: main.rs
disassembler/: Cargo.toml
disassembler/src/: main.rs
py/: .gitignore  Cargo.toml  pre-build.sh
py/cao_lang/: __init__.py
py/src/: lib.rs
py/tests/: test_cao_lang.py
src/: instruction.rs  lib.rs  macros.rs  prelude.rs  procedures.rs  scalar.rs  traits.rs  vm.rs
src/compiler/: astnode.rs  compilation_error.rs  description.rs  mod.rs  tests.rs
src/macros/: vm.rs
src/traits/: impls.rs  mod.rs
wasm/: .gitignore  Cargo.toml  Makefile  README.md  justfile
wasm/docs/: README.md  package-lock.json  package.json
wasm/src/: ast_node.rs  compilation_unit.rs  lib.rs
wasm/tests/: node.rs  node_tests.rs  web.rs
wasm/tests/implementations/: compiler.rs  compiler_tests.rs  mandelbrot.json  mod.rs
xtask/: Cargo.toml
xtask/src/: build_commands.rs  cmd_build.rs  cmd_test.rs  cmd_version.rs  main.rs  test_commands.rs
