[package]
name = "cao-lang"
version = "0.1.0"
authors = ["Daniel Kiss <littlesnorrboy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
serde = "1"
serde_derive = "1"
arrayvec = { version="0.5", features=["serde", "array-sizes-33-128"] }

[dev-dependencies]
simple_logger = "1.0"
serde_json = "*"
