[package]
name = "ccao-lang"
version = "0.1.0"
authors = ["Daniel Kiss <littlesnorrboy@gmail.com>"]
edition = "2018"
build = "build.rs"
license="MIT"

[lib]
name = "cao_lang_c"
crate-type = ["cdylib", "staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
cao-lang = { path = "../cao-lang", default-features = false, features = [
    "serde"
] }
serde_json = "1.0.75"

[build-dependencies]
cbindgen = "0.20.0"
