[package]
name = "cao-lang-wasm"
version = "0.7.0"
authors = ["Daniel Kiss <littlesnorrboy@gmail.com>"]
edition = "2018"
description="Wrapper of [CaoLang](https://github.com/caolo-game/cao-lang.git)"
license="Apache-2.0"
repository="https://github.com/caolo-game/cao-lang-wasm"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cao-lang = { path = "../cao-lang" }
wasm-bindgen = { version="0.2", features=["serde-serialize"] }
wasm-bindgen-futures = "0.4"
serde = "1"
serde_derive = "1"
js-sys = "*"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
serde_json = "*"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
