[[bench]]
harness = false
name = "cao_lang_benches"

[build-dependencies]
semver = "1"
toml = "0.5"

[build-dependencies.serde]
features = ["derive"]
version = "1"

[dependencies]
num_enum = "0.5"
thiserror = "1"

[dependencies.arrayvec]
features = ["serde"]
version = "0.7"

[dependencies.serde]
features = ["derive"]
optional = true
version = "1"

[dependencies.tracing]
default-features = false
features = ["release_max_level_info"]
version = "0.1"

[dev-dependencies]
env_logger = "0.9"
serde_json = "1"
serde_yaml = "0.8"

[dev-dependencies.criterion]
features = ["html_reports"]
version = "0.3"

[dev-dependencies.test-env-log]
default-features = false
features = ["trace"]
version = "0.2"

[dev-dependencies.tracing-subscriber]
default-features = false
features = ["env-filter", "fmt"]
version = "0.2"

[features]
default = ["serde"]

[package]
authors = ["Daniel Kiss <littlesnorrboy@gmail.com>"]
build = "build.rs"
description = "The back-end of cao-lang, a node based visual scripting language"
edition = "2018"
license-file = "../LICENSE"
name = "cao-lang"
readme = "../README.md"
repository = "https://github.com/caolo-game/cao-lang.git"
version = "0.1.37"
