[[bench]]
harness = false
name = "cao_lang_benches"

[build-dependencies]
semver = "^1.0"
toml = "^0.8"

[build-dependencies.serde]
features = ["derive"]
version = "^1.0"

[dependencies]
num_enum = "^0.7"
thiserror = "^1.0"

[dependencies.arrayvec]
features = ["serde"]
version = "^0.7"

[dependencies.bytemuck]
features = ["derive"]
version = "^1"

[dependencies.serde]
features = ["derive"]
optional = true
version = "^1.0"

[dependencies.smallvec]
features = ["serde"]
version = "^1"

[dependencies.tracing]
default-features = false
features = ["release_max_level_info"]
version = "^0.1"

[dev-dependencies]
bincode = "1"
ciborium = "0.2"
env_logger = "^0.11"
serde_json = "^1.0"
serde_yaml = "^0.9"

[dev-dependencies.criterion]
features = ["html_reports"]
version = "^0.5"

[dev-dependencies.tracing-subscriber]
default-features = false
features = ["env-filter", "fmt"]
version = "^0.3"

[dev-dependencies.tracing-test]
features = ["no-env-filter"]
version = "0.2"

[features]
default = ["serde"]

[package]
authors = ["Daniel Kiss <littlesnorrboy@gmail.com>"]
build = "build.rs"
description = "The back-end of cao-lang, a node based visual scripting language"
edition = "2021"
license = "MIT"
name = "cao-lang"
readme = "../README.md"
repository = "https://github.com/caolo-game/cao-lang.git"
version = "0.2.2"
