[package]
name = "caoc"
version = "0.1.0"
authors = ["Daniel Kiss <littlesnorrboy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
cao-lang = { path = "../cao-lang" }
serde_json = "1"
clap = "3.0.0-beta.2"
