[dependencies]
serde_json = "1.0.138"
serde_yaml = "0.9.34"

[dependencies.cao-lang]
default-features = false
features = ["serde"]
path = "../cao-lang"

[dependencies.pyo3]
features = ["extension-module", "abi3"]
version = "0.23.4"

[lib]
crate-type = ["cdylib"]
name = "cao_lang_py"

[package]
authors = ["Daniel Kiss <littlesnorrboy@gmail.com>"]
edition = "2021"
license = "MIT"
name = "cao-lang-py"
version = "0.2.5"
