[dependencies]
js-sys = "0.3.57"
serde = "1.0.137"
serde-wasm-bindgen = "0.4"
serde_derive = "1.0.137"
serde_json = "1.0.81"
wasm-bindgen-futures = "0.4.30"
wasm-logger = "0.2.0"

[dependencies.cao-lang]
features = ["serde"]
path = "../cao-lang"

[dependencies.console_error_panic_hook]
optional = true
version = "0.1.7"

[dependencies.wasm-bindgen]
features = ["serde-serialize"]
version = "0.2.80"

[dev-dependencies]
serde-wasm-bindgen = "0.4"
serde_json = "1.0.81"
wasm-bindgen-test = "0.3.30"

[features]
default = []

[lib]
crate-type = ["cdylib", "rlib"]

[package]
authors = ["Daniel Kiss <littlesnorrboy@gmail.com>"]
description = "Wrapper of [CaoLang](https://github.com/caolo-game/cao-lang.git)"
edition = "2021"
license = "MIT"
name = "cao-lang-wasm"
repository = "https://github.com/caolo-game/cao-lang"
version = "0.1.117"
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]
[profile.dev]
incremental = true
opt-level = 1

[profile.release]
opt-level = "z"
